Fixes text overflow in card on dashboard page

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -289,7 +289,7 @@ footer {
 @media only screen and (min-width: 1400px) {
 	/** Screens bigger that 1400px **/
 	.dashboard.card-content {
-		height: 90px;
+		height: 110px;
 	}
 }
 
